Feature/course-fix fix course fetching hibernate error (#13)
* fix(course): fix course fetching does not have an index when using a list

* fix(course): improve course assembler logic and null safety

* fix(course): update course assembler for null safety and sorting consistency

* fix(course): clean up Course entity and improve message properties

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -4,7 +4,7 @@ language: vi-VN
 tone_instructions: "Vui lòng nói thẳng vấn đề và thẳng thắn"
 
 reviews:
-  profile: assertive
+  profile: chill
   high_level_summary: false
   collapse_walkthrough: false
   changed_files_summary: false
