--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -95,5 +95,6 @@ springdoc:
     enabled: false
 
 vnpay:
-  tmn-code: 2JVRHVF9
-  hash-secret: 4TD8VD92KMWZ6E1VCUDJ4HF78LX7D1FD
+  tmn-code: 4V0UG95A
+  hash-secret: 9UUN29DW7VXYOZEYV9F670QUJPDY3I5E
+  url-return: https://vinaacademy.huuloc.id.vn/transaction
