--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.4.3</version>
+    <version>3.4.9</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.vinaacademy</groupId>
@@ -31,6 +31,11 @@
     <java.version>17</java.version>
     <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
     <aws.java.sdk.version>2.32.32</aws.java.sdk.version>
+
+    <!--  gRPC  -->
+    <grpc.version>1.72.0</grpc.version>
+    <protobuf-java.version>4.30.2</protobuf-java.version>
+    <spring-grpc.version>0.8.0</spring-grpc.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -38,6 +43,13 @@
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>bom</artifactId>
         <version>${aws.java.sdk.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.grpc</groupId>
+        <artifactId>spring-grpc-dependencies</artifactId>
+        <version>${spring-grpc.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -63,6 +75,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -198,6 +214,16 @@
       <artifactId>aws-crt</artifactId>
       <version>0.38.11</version>
     </dependency>
+
+    <!-- gRPC dependencies -->
+    <dependency>
+      <groupId>org.springframework.grpc</groupId>
+      <artifactId>spring-grpc-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-services</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -242,6 +268,31 @@
             </compilerArg>
           </compilerArgs>
         </configuration>
+      </plugin>
+      <!--  gRPC  -->
+      <plugin>
+        <groupId>io.github.ascopes</groupId>
+        <artifactId>protobuf-maven-plugin</artifactId>
+        <version>3.4.2</version>
+        <configuration>
+          <protocVersion>${protobuf-java.version}</protocVersion>
+          <binaryMavenPlugins>
+            <binaryMavenPlugin>
+              <groupId>io.grpc</groupId>
+              <artifactId>protoc-gen-grpc-java</artifactId>
+              <version>${grpc.version}</version>
+              <options>@generated=omit</options>
+            </binaryMavenPlugin>
+          </binaryMavenPlugins>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
